packaging: adding libuuid dependency
This patch adds the 'libuuid-devel' BuildRequire and 'libuuid'
require to the Phobos spec file.

Change-Id: I9c8fb38d92f11e36ccea25da014918b76b29b770
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/13150
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>

--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -43,6 +43,7 @@ BuildRequires: make
 BuildRequires: openssl-devel >= 0.9.7
 BuildRequires: xxhash-devel
 BuildRequires: libcmocka-devel
+BuildRequires: libuuid-devel
 
 Requires: %{postgres_prefix}-server
 Requires: %{postgres_prefix}-contrib
@@ -64,6 +65,7 @@ Requires: protobuf
 Requires: protobuf-c
 Requires: openssl >= 0.9.7
 Requires: xxhash-libs
+Requires: libuuid
 
 %description
 Phobos aims to implement high performance distributed object storage on a wide
