packaging: spec file changelog catching-up
One OCEAN Phobos version was missing into the changelog of
the spec file.

Change-Id: I458bf6cf3915273fd7d5852c4ff01d569d559e2b
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/13157
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Guillaume Courrier <guillaume.courrier@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -202,6 +202,9 @@ ldconfig
 - Tape import: we can now import into a Phobos system a tape from an other
   Phobos system (recovery or transfer).
 
+* Wed Nov 29 2023 - Guillaume Courrier <guillaume.courrier@cea.fr> - 1.95.1-2
+- Add missing pho_ldm.h in installed headers
+
 * Fri Nov 24 2023 - Patrice Lucas <patrice.lucas@cea.fr> - 1.95.1-1
 - ltfs: improve ltfs log with serial number
 - ltfs: return an error if labels are different at mount operation
