--- a/src/layout-modules/Makefile.am
+++ b/src/layout-modules/Makefile.am
@@ -1,6 +1,6 @@
 AM_CFLAGS= $(CC_OPT)
 
-noinst_HEADERS=raid1.h raid4.h
+noinst_HEADERS=raid1.h raid4/raid4.h
 
 pkglib_LTLIBRARIES=libpho_layout_raid1.la libpho_layout_raid4.la
 
@@ -13,7 +13,7 @@ if USE_XXHASH
 libpho_layout_raid1_la_LDFLAGS+=-lxxhash
 endif
 
-libpho_layout_raid4_la_SOURCES=raid4.c
+libpho_layout_raid4_la_SOURCES=raid4/raid4.c
 libpho_layout_raid4_la_CFLAGS=-fPIC $(AM_CFLAGS) -I ../layout
 libpho_layout_raid4_la_LIBADD=../store/libphobos_store.la \
                               ../layout/libpho_layout_common.la
