DSS: adding library columns
These columns will allow us to manage a multi-library
configuration. Library is added to device, media and extent
tables.

Name column is no more UNIQUE as we consider we can have
media with the same label in two different libraries.

The library column must have a value. The phobos configuration
file must contain the default value per family : tape, dir,
rados pool.

The library is added to the pho_id structure.

The grouped_read queue key changes from medium name to complete
medium_id.

The lrs media cache functions to hash and test equality are
mutualized with grouped read to take into account the whole
pho_id structure and not only the field name.

Change-Id: I9a4efa5e06c1b4eabca6c9fec73d008901892d43
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/13207
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Gauthier Evraerd <gauthier.evraerd.ocre@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -108,6 +108,10 @@ tape_full_threshold = 5
 default_family = tape
 # default alias for put operations
 default_alias = simple
+# default library
+default_dir_library = legacy
+default_rados_library = legacy
+default_tape_library = legacy
 
 [io]
 # Force the block size (in bytes) used for writing data to all media.
