--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -62,6 +62,7 @@ check_SCRIPTS=acceptance.test \
               test_lrs_drive_status.sh \
               test_lrs_scheduling.test \
               test_media.sh \
+              test_multilibrary.test \
               test_object_list.sh \
               test_phobos_tape_library_test.sh \
               test_ping.test \
