--- a/tests/phobos.conf
+++ b/tests/phobos.conf
@@ -28,6 +28,9 @@ drive_rw = LTO6_drive
 
 [store]
 default_alias = simple
+default_tape_library = legacy
+default_dir_library = legacy
+default_rados_library = legacy
 
 [alias "simple"]
 layout = raid1
