cfg: add LTO9 tapes to supported_list parameter
Change-Id: I02e2b0e1a449fa2d98eb2c22c97104dffb30239f
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/13265
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -169,8 +169,8 @@ models = ULTRIUM-TD9,ULT3580-TD9,ULTRIUM-HH9,ULT3580-HH9,HH LTO Gen 9
 [tape_model]
 # List of supported tape models (checked by "phobos tape add ...")
 # comma separated list of tape models, without any space
-# default: LTO5,LTO6,LTO7,LTO8,T10KB,T10KC,T10KD
-#supported_list = LTO5,LTO6,LTO7,LTO8,T10KB,T10KC,T10KD
+# default: LTO5,LTO6,LTO7,LTO8,LTO9,T10KB,T10KC,T10KD
+#supported_list = LTO5,LTO6,LTO7,LTO8,LTO9,T10KB,T10KC,T10KD
 
 # List of drive types that can write each tape generation
 # (comma-separated lists without any space)
