raid4: add hash of extents
As for the raid1 layout, the raid4 will now optionally
hash the content of each extent. Since RAID4 writes 3 different extents,
we need to maintain 3 different hashes.

Change-Id: Ic65bc62a4f182ba08ec5cfc5664c5517817d83c1
Signed-off-by: Courrier Guillaume <guillaume.courrier@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/13336
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Gauthier Evraerd <gauthier.evraerd.ocre@cea.fr>

--- a/src/layout-modules/Makefile.am
+++ b/src/layout-modules/Makefile.am
@@ -21,3 +21,6 @@ libpho_layout_raid4_la_CFLAGS=-fPIC $(AM_CFLAGS) -I ../layout
 libpho_layout_raid4_la_LIBADD=../store/libphobos_store.la \
                               ../layout/libpho_layout_common.la
 libpho_layout_raid4_la_LDFLAGS=-version-info 0:0:0
+if USE_XXHASH
+libpho_layout_raid4_la_LDFLAGS+=-lxxhash
+endif
