--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -127,18 +127,22 @@ default_tape_library = legacy
 # default is 2.
 repl_count = 2
 
-# Activate the XXH128 calculation at creation of a new extent. (In environments
-# where xxhash has a version lower than 0.8.0, this parameter is ignored and the
-# xxh128 is not computed. If set to "yes", the client will issue a warning to
-# indicate this inconsistency.) Any other value than "yes" disables the XXH128
-# calculation of extent hash.
-# default: yes (no if xxh128 is not available)
-#extent_xxh128 = yes
+# Boolean value to indicate whether Phobos should compute the XXHASH128 value of
+# each written extent.
+#
+# In environments where xxhash has a version lower than 0.8.0, this parameter is
+# ignored and the xxh128 is not computed. If set to "true", the client will
+# issue a warning to indicate this inconsistency.
+#
+# Default: true (false if Phobos is not compiled with xxh128 support)
+# extent_xxh128 = true
 
-# Activate the MD5 calculation at creation of a new extent. Any other value
-# than "yes" disables the MD5 calculation of each extent.
-# default: no (yes if xxh128 is not available)
-#extent_md5 = no
+# Boolean value to indicate whether Phobos should compute the MD5 value of each
+# written extent.
+#
+# Default: false (true if Phobos is not compiled with xxh128 support)
+#
+# extent_md5 = false
 
 [alias "simple"]
 # default alias for put operations
