SCSI: use PHO_CFG_GET_BOOL for sep_sn_query
This change will also change the accepted values from 1/0 to
true/false.

Change-Id: Ibe50ff4cf565899372caeb856ffa1c422860dcb7
Signed-off-by: Courrier Guillaume <guillaume.courrier@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/13366
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -86,10 +86,10 @@ move_timeout_ms = 300000
 inquiry_timeout_ms = 10
 
 [lib_scsi]
-# Query drive serial number and volume label as separate requests
-# in case the library can't report both (e.g. IBM library).
-# 0=no, 1=yes
-sep_sn_query   = 0
+# Boolean value indicating whether Phobos should query the drive serial number
+# and the volume label in seperate SCSI requests. Some libraries can't report
+# both in one request (e.g. IBM library).
+sep_sn_query   = false
 
 [ltfs]
 # LTFS command wrappers
