raid1: update RAID1 to use the raid_io_context interface
This patch removes the duplications with the RAID4 layout.

Change-Id: I4bd4343664a7da5882e53fd8b2764c0768cec6ca
Signed-off-by: Courrier Guillaume <guillaume.courrier@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/13375
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>

--- a/tests/interns/Makefile.am
+++ b/tests/interns/Makefile.am
@@ -126,8 +126,8 @@ test_io_LDADD+=$(ADMIN_LIB)
 endif
 
 test_layout_module_SOURCES=test_layout_module.c
-test_layout_module_LDADD=$(LAYOUT_LIB) $(RAID1_LIB) $(CFG_LIB) $(COMMON_LIB) \
-                         -ldl
+test_layout_module_LDADD=$(LAYOUT_LIB) $(IO_POSIX_LIB) $(RAID1_LIB) $(CFG_LIB) \
+                         $(COMMON_LIB) -ldl
 test_layout_module_CFLAGS=$(AM_CFLAGS) -I..
 
 test_ldm_SOURCES=test_ldm.c
