cli: add tests for phobos tape delete
Change-Id: I90a2ed638069b0f1ebae0c5e381ed313059d9325
Signed-off-by: Gauthier EVRAERD <gauthier.evraerd.ocre@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/13386
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Gauthier Evraerd <gauthier.evraerd@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -63,6 +63,7 @@ check_SCRIPTS=acceptance.test \
               test_lrs_drive_status.sh \
               test_lrs_scheduling.test \
               test_media.sh \
+              test_media_delete.test \
               test_multilibrary.test \
               test_object_list.sh \
               test_phobos_tape_library_test.sh \
