cli: add rados_pool delete
This patch adds the new command "phobos rados_pool delete". It takes
as argument a list of rados_pools to remove.

Change-Id: I204cd981da2733104b956d96b04e986b1a06da69
Signed-off-by: Gauthier EVRAERD <gauthier.evraerd.ocre@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/13389
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Gauthier Evraerd <gauthier.evraerd@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>

--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -83,7 +83,8 @@ check_SCRIPTS=acceptance.test \
               test_unlock_at_unload.test
 
 if RADOS_ENABLED
-check_SCRIPTS+=test_store_rados_commands.sh test_locate_rados.test
+check_SCRIPTS+=test_store_rados_commands.sh test_locate_rados.test \
+               test_media_delete_rados.test
 endif
 
 TESTS_ENVIRONMENT = HAVE_XXH128="@HAVE_XXH128@"
