store: add the 'rename' feature
This patch adds the rename of an object to another name. It can done
with the CLI command "phobos object rename [--oid old_oid] [--uuid uuid]
new_oid".

Change-Id: I2c803658b79eaacff0c45200e866a12c1d4a09c2
Signed-off-by: Vincent CASTELLAN <vincent.castellan.ocre@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/13410
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Gauthier Evraerd <gauthier.evraerd@cea.fr>

--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -73,6 +73,7 @@ check_SCRIPTS=acceptance.test \
               test_put.sh \
               test_raid1.test \
               test_raid4.test \
+              test_rename.test \
               test_repack.test \
               test_resource_availability.test \
               test_resource_management.sh \
