tlc: configuration per library
This patch allows to define TLC parameters per library: hostname,
port, listen_port, listen_hostname.

LRS will connect to the corresponding TLC.

Change-Id: Iccb59bdda59fc88db2464bc48228b0181cdf63b9
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/13549
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Thomas Leibovici <thomas.leibovici@cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -200,8 +200,12 @@ drive_rw = LTO8_drive,LTO9_drive
 [tape_type "LTO9"]
 drive_rw = LTO9_drive
 
-# Tape Library Controler
-[tlc]
+# Tape Library Controler, one tlc section per library.
+# The section name must be the concatenation of the prefix "tlc_"
+# followed by the "library_name".
+# (The default library name is defined by the above store section
+# default_tape_library parameter.)
+[tlc_library_name]
 # Server address
 hostname = localhost
 port = 20123
