--- a/tests/phobos.conf
+++ b/tests/phobos.conf
@@ -63,7 +63,7 @@ family = dir
 layout = raid1
 tags = no-tag-1,no-tag-2
 
-[tlc]
+[tlc_legacy]
 hostname = localhost
 port = 20123
 lib_device = /dev/changer
