test: bad library tlc test
Try to start a tlc with a specific "bad_library" library name and
check that the "bad_library" parameter is taken into account.

Change-Id: Ieb808ff432d44e2a517f095cb728e31cad57847e
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/13553
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Thomas Leibovici <thomas.leibovici@cea.fr>

--- a/tests/phobos.conf
+++ b/tests/phobos.conf
@@ -67,3 +67,6 @@ tags = no-tag-1,no-tag-2
 hostname = localhost
 port = 20123
 lib_device = /dev/changer
+
+[tlc_bad_library]
+lib_device = /no_existing_dev_changer
