test: add a second library to tests
This patch adds a second virtual library "library_bis" into the
continuous integration configuration.

A test is added to put/get an object on library_bis.

This second library will be used in following patches to test
tape/drive library compatibility.

Change-Id: I10c8015c9615f2e5fe7765fa771c63e3b5e5addf
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/13558
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/tests/phobos.conf
+++ b/tests/phobos.conf
@@ -68,5 +68,10 @@ hostname = localhost
 port = 20123
 lib_device = /dev/changer
 
+[tlc_library_bis]
+hostname = localhost
+port = 20124
+lib_device = /dev/changer_bis
+
 [tlc_bad_library]
 lib_device = /no_existing_dev_changer
