cli,admin: add library to device migrate
We can migrate device from different libraries.

Change-Id: Ib27f8dbdd78a02e9ef142ca73c5df346a167defa
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/13597
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Gauthier Evraerd <gauthier.evraerd@cea.fr>

--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -47,6 +47,7 @@ check_SCRIPTS=acceptance.test \
               test_compatible_drive_exists.test \
               test_delete.sh \
               test_drive_lookup.test \
+              test_drive_migrate.test \
               test_extent_list.sh \
               test_fair_share.test \
               test_file_after_put.test \
