--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -46,6 +46,7 @@ check_PROGRAMS=test_fair_share \
 check_SCRIPTS=acceptance.test \
               test_compatible_drive_exists.test \
               test_delete.sh \
+              test_drive_list.test \
               test_drive_lookup.test \
               test_drive_migrate.test \
               test_extent_list.sh \
