tests: switch `test_delete` CLI test to new test format
Change-Id: I4f6f0e762ba7b7e45d52460bcb6f05db179d93f5
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/13776
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Gauthier Evraerd <gauthier.evraerd@cea.fr>

--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -45,7 +45,7 @@ check_PROGRAMS=test_fair_share \
 
 check_SCRIPTS=acceptance.test \
               test_compatible_drive_exists.test \
-              test_delete.sh \
+              test_delete.test \
               test_drive_list.test \
               test_drive_lookup.test \
               test_drive_migrate.test \
