--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -96,6 +96,7 @@ sep_sn_query   = false
 cmd_mount      = /usr/sbin/pho_ldm_helper mount_ltfs  "%s" "%s"
 cmd_umount     = /usr/sbin/pho_ldm_helper umount_ltfs "%s" "%s"
 cmd_format     = /usr/sbin/pho_ldm_helper format_ltfs "%s" "%s"
+cmd_release    = /usr/sbin/pho_ldm_helper release_ltfs "%s"
 
 # Percentage of capacity reserved for updating the index.
 # Value goes from 1 to 100
