--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -50,7 +50,7 @@ check_SCRIPTS=acceptance.test \
               test_drive_lookup.test \
               test_drive_migrate.test \
               test_drive_scsi_release.test \
-              test_extent_list.sh \
+              test_extent_list.test \
               test_fair_share.test \
               test_file_after_put.test \
               test_format.test \
