--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -49,6 +49,7 @@ check_SCRIPTS=acceptance.test \
               test_drive_list.test \
               test_drive_lookup.test \
               test_drive_migrate.test \
+              test_drive_scsi_release.test \
               test_extent_list.sh \
               test_fair_share.test \
               test_file_after_put.test \
