tlc: renamed "tlc" deamon by "phobos_tlc"
Just a renaming of the tlc deamon

Change-Id: I5b125d3f4968a68b3bb12e4b1352b69738192707
Signed-off-by: Arnaud GAUTHERET <arnaud.gautheret@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/13760
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/src/tlc/Makefile.am
+++ b/src/tlc/Makefile.am
@@ -2,26 +2,26 @@ AM_CFLAGS= $(CC_OPT)
 
 SUBDIRS=scsi
 
-sbin_PROGRAMS=tlc
+sbin_PROGRAMS=phobos_tlc
 
 noinst_LTLIBRARIES=libpho_tlc.la
 
 unitdir=`pkg-config systemd --variable=systemdsystemunitdir`
-unit_files=tlc.service
+unit_files=phobos_tlc.service
 unit_DATA=$(unit_files)
 EXTRA_DIST=$(unit_files)
 
-tlc_SOURCES=tlc.c tlc_cfg.h tlc_cfg.c tlc_library.h tlc_library.c \
+phobos_tlc_SOURCES=tlc.c tlc_cfg.h tlc_cfg.c tlc_library.h tlc_library.c \
             scsi/scsi_api.h
-tlc_CFLAGS=$(AM_CFLAGS) -Iscsi
-tlc_LDADD=../dss/libpho_dss.la \
+phobos_tlc_CFLAGS=$(AM_CFLAGS) -Iscsi
+phobos_tlc_LDADD=../dss/libpho_dss.la \
           ../cfg/libpho_cfg.la \
           ../common/libpho_common.la \
           ../communication/libpho_comm.la \
           ../daemon/libpho_daemon.la \
           ../serializer/libpho_serializer_tlc.la \
           scsi/libpho_scsi.la
-tlc_LDFLAGS=-Wl,-rpath=$(libdir) -Wl,-rpath=$(pkglibdir)
+phobos_tlc_LDFLAGS=-Wl,-rpath=$(libdir) -Wl,-rpath=$(pkglibdir)
 
 libpho_tlc_la_SOURCES=tlc_cfg.h tlc_cfg.c tlc_library.h tlc_library.c
 libpho_tlc_la_CFLAGS=$(AM_CFLAGS) -Iscsi
