--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -158,8 +158,8 @@ echo "%{_libdir}/phobos" > %{buildroot}/%{_sysconfdir}/ld.so.conf.d/phobos.conf
 %{_sbindir}/phobos_tape_library_test
 %{_sbindir}/phobos_tape_library_test.bash
 %{_sbindir}/phobos_tape_library_mtx_test.bash
-%{_sbindir}/tlc
-%{_unitdir}/tlc.service
+%{_sbindir}/phobos_tlc
+%{_unitdir}/phobos_tlc.service
 
 %config(noreplace) %{_sysconfdir}/phobos.conf
 %dir %{phobosdocdir}
