cli: add autocomplete to commands
This patch adds the autocomplete feature by using the `argcomplete`
package. It takes advantage of the parsers defined for `argparse` to
create the autocomplete dictionnary.

Currently, this feature is limited to the basic CLI commands, and there
is no autocomplete available for resources yet.

Change-Id: Ic08bff6014f88540bdcc5f81535f52c00c4e0b20
Signed-off-by: VALERI Yoann <yoann.valeri@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/13762
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Gauthier Evraerd <gauthier.evraerd@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -44,6 +44,7 @@ BuildRequires: openssl-devel >= 0.9.7
 BuildRequires: xxhash-devel
 BuildRequires: libcmocka-devel
 BuildRequires: libuuid-devel
+BuildRequires: python3-argcomplete
 
 Requires: %{postgres_prefix}-server
 Requires: %{postgres_prefix}-contrib
@@ -138,6 +139,9 @@ rm -f $RPM_BUILD_ROOT/%{_libdir}/phobos/libpho_*.la
 mkdir -p %{buildroot}/%{_sysconfdir}/ld.so.conf.d/
 echo "%{_libdir}/phobos" > %{buildroot}/%{_sysconfdir}/ld.so.conf.d/phobos.conf
 
+mkdir %{buildroot}/%{_sysconfdir}/bash_completion.d
+register-python-argcomplete phobos > %{buildroot}/%{_sysconfdir}/bash_completion.d/phobos-argcomplete.sh
+
 %files
 
 %{_libdir}/libphobos_store.so*
@@ -165,6 +169,7 @@ echo "%{_libdir}/phobos" > %{buildroot}/%{_sysconfdir}/ld.so.conf.d/phobos.conf
 %{_unitdir}/phobos_tlc.service
 
 %config(noreplace) %{_sysconfdir}/phobos.conf
+%config(noreplace) %{_sysconfdir}/bash_completion.d/phobos-argcomplete.sh
 %dir %{phobosdocdir}
 %doc %{phobosdocdir}/README.md
 %doc %{phobosdocdir}/template.conf
