tests: switch `test_format` CLI test to new test format
This patch adds also a test to check the format of a dir with a
relative path.

Change-Id: I52ad3fb0d54a911aaff9871a6d9b31801c20bdf7
Signed-off-by: Gauthier EVRAERD <gauthier.evraerd@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/13789
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -53,7 +53,7 @@ check_SCRIPTS=acceptance.test \
               test_extent_list.sh \
               test_fair_share.test \
               test_file_after_put.test \
-              test_format.sh \
+              test_format.test \
               test_get.sh \
               test_group_sync.sh \
               test_import.test \
