cfg: add library in the alias
This patch adds the library in the alias in the config. If no library
is set in the alias, the lrs chooses the best medium to write without
taking into account the library.

Also, it is possible to overload the alias with the --library option.

Change-Id: Idfde05320185e9e1a24394a9ab0ee18843cd19f0
Signed-off-by: Gauthier EVRAERD <gauthier.evraerd@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/13868
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -149,6 +149,7 @@ repl_count = 2
 # default alias for put operations
 layout = raid1
 lyt-params = repl_count=1
+library = legacy
 
 ######### Tape/drive support and compatibility rules ########
 # You should not modify the following configuration unless:
