--- a/tests/phobos.conf
+++ b/tests/phobos.conf
@@ -40,28 +40,45 @@ lyt-params = repl_count=1
 family = dir
 layout = raid1
 tags = foo-tag,bar-tag
+library = legacy
+
+[alias "full-test-lib"]
+family = dir
+layout = raid1
+tags = foo-tag,bar-tag
+library = blob
 
 [alias "full-tape-test"]
 family = tape
 layout = raid1
 tags = foo-tag,bar-tag
+library = legacy
 
 [alias "empty-family-test"]
 layout = raid1
 tags = foo-tag
+library = legacy
 
 [alias "empty-layout-test"]
 family = dir
 tags = foo-tag
+library = legacy
 
 [alias "empty-tag-test"]
 family = dir
 layout = raid1
+library = legacy
+
+[alias "empty-lib-test"]
+family = dir
+layout = raid1
+tags = foo-tag
 
 [alias "erroneus-tag-test"]
 family = dir
 layout = raid1
 tags = no-tag-1,no-tag-2
+library = legacy
 
 [tlc_legacy]
 hostname = localhost
