tlc: fix phobos_tlc.service
This patch fixes ExecStart in phobos_tlc.service as there was an error
when starting phobos_tlc with "systemctl start phobos_tlc". The
ExecStart was still with the old executable name and was not found.

Change-Id: I58c3f4ed967f226d052145e833e3426d44b63442
Signed-off-by: Gauthier EVRAERD <gauthier.evraerd@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/13925
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/src/tlc/phobos_tlc.service
+++ b/src/tlc/phobos_tlc.service
@@ -8,10 +8,10 @@ Type=forking
 # whole control group after 5 minutes
 KillMode=mixed
 TimeoutStopSec=300
-Environment="DAEMON_PID_FILEPATH=/run/tlc/tlc.pid"
-RuntimeDirectory=tlc
-PIDFile=/run/tlc/tlc.pid
-ExecStart=/usr/sbin/tlc
+Environment="DAEMON_PID_FILEPATH=/run/phobos_tlc/phobos_tlc.pid"
+RuntimeDirectory=phobos_tlc
+PIDFile=/run/phobos_tlc/phobos_tlc.pid
+ExecStart=/usr/sbin/phobos_tlc
 
 [Install]
 WantedBy=multi-user.target
