comm: add `pho_comm_wrapper.h`
Some internal functions of admin module need to be duplicated to store
module. Those functions were used to aggregate communication
sending/receiving with information packing/unpacking. Thus, we export
those functions in the communication library.

Change-Id: I9679b095be8c17a6619e1a055eecefefb5e76484
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/13933
Reviewed-by: Gauthier Evraerd <gauthier.evraerd@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>

--- a/src/communication/Makefile.am
+++ b/src/communication/Makefile.am
@@ -2,4 +2,4 @@ AM_CFLAGS= $(CC_OPT)
 
 noinst_LTLIBRARIES=libpho_comm.la
 
-libpho_comm_la_SOURCES=comm.c
+libpho_comm_la_SOURCES=comm.c comm_wrapper.c
