--- a/src/include/Makefile.am
+++ b/src/include/Makefile.am
@@ -5,6 +5,7 @@ proto_headers=pho_proto_common.pb-c.h pho_proto_lrs.pb-c.h pho_proto_tlc.pb-c.h
 noinst_HEADERS=pho_cache.h \
                pho_cfg.h \
                pho_comm.h \
+               pho_comm_wrapper.h \
                pho_common.h \
                pho_daemon.h \
                pho_dss.h \
