ldm: add full threshold on medium to all family
This patch adds a full threshold on medium of dir and rados family as
it was already done for the tape. The value can be set in the conf
file, otherwise a default value will be used.

Change-Id: Ia56b8d3894da4e6698635f56e3d54fa2316290ba
Signed-off-by: Gauthier EVRAERD <gauthier.evraerd@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14048
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -98,9 +98,20 @@ cmd_umount     = /usr/sbin/pho_ldm_helper umount_ltfs "%s" "%s"
 cmd_format     = /usr/sbin/pho_ldm_helper format_ltfs "%s" "%s"
 cmd_release    = /usr/sbin/pho_ldm_helper release_ltfs "%s"
 
+[tape]
 # Percentage of capacity reserved for updating the index.
 # Value goes from 1 to 100
 tape_full_threshold = 5
+
+[dir]
+# Percentage of capacity reserved.
+# Value goes from 1 to 100
+dir_full_threshold = 1
+
+[rados_pool]
+# Percentage of capacity reserved.
+# Value goes from 1 to 100
+rados_pool_full_threshold = 1
 
 [store]
 # default layout for put operations
