cfg: extend io_block_size parameter for each family
This patch extends the io_block_size parameter in the conf for each
family (dir/tape/rados).

Change-Id: Ic7757bcc44e97d2af173f73409f15c602e27de92
Signed-off-by: Gauthier EVRAERD <gauthier.evraerd@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14089
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -118,7 +118,7 @@ default_tape_library = legacy
 # Force the block size (in bytes) used for writing data to all media.
 # If value is null or is not specified, phobos will use the value provided
 # by the storage system (statfs.f_bsize, see statfs(2)).
-#io_block_size = 1048576
+#io_block_size = dir=1048576,tape=1048576,rados_pool=1048576
 
 # Block size of the file system mounted. If set, all the file system for the
 # one family should have the same block size which is defined in the conf.
