store: rename `alias` to `profile`
This new naming better stick with the idea of proposing different storage
profiles.

Change-Id: Ia820756299fbf10603ff58d336411192e2f83f83
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14069
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Gauthier Evraerd <gauthier.evraerd@cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -107,8 +107,8 @@ tape_full_threshold = 5
 # default_layout = raid1
 # default resource family for put operations
 default_family = tape
-# default alias for put operations
-default_alias = simple
+# default profile for put operations
+default_profile = simple
 # default library
 default_dir_library = legacy
 default_rados_library = legacy
@@ -145,8 +145,8 @@ repl_count = 2
 #
 # extent_md5 = false
 
-[alias "simple"]
-# default alias for put operations
+[profile "simple"]
+# default profile for put operations
 layout = raid1
 lyt-params = repl_count=1
 library = legacy
