--- a/tests/phobos.conf
+++ b/tests/phobos.conf
@@ -27,54 +27,54 @@ drive_rw = LTO5_drive,LTO6_drive
 drive_rw = LTO6_drive
 
 [store]
-default_alias = simple
+default_profile = simple
 default_tape_library = legacy
 default_dir_library = legacy
 default_rados_library = legacy
 
-[alias "simple"]
+[profile "simple"]
 layout = raid1
 lyt-params = repl_count=1
 
-[alias "full-test"]
+[profile "full-test"]
 family = dir
 layout = raid1
 tags = foo-tag,bar-tag
 library = legacy
 
-[alias "full-test-lib"]
+[profile "full-test-lib"]
 family = dir
 layout = raid1
 tags = foo-tag,bar-tag
 library = blob
 
-[alias "full-tape-test"]
+[profile "full-tape-test"]
 family = tape
 layout = raid1
 tags = foo-tag,bar-tag
 library = legacy
 
-[alias "empty-family-test"]
+[profile "empty-family-test"]
 layout = raid1
 tags = foo-tag
 library = legacy
 
-[alias "empty-layout-test"]
+[profile "empty-layout-test"]
 family = dir
 tags = foo-tag
 library = legacy
 
-[alias "empty-tag-test"]
+[profile "empty-tag-test"]
 family = dir
 layout = raid1
 library = legacy
 
-[alias "empty-lib-test"]
+[profile "empty-lib-test"]
 family = dir
 layout = raid1
 tags = foo-tag
 
-[alias "erroneus-tag-test"]
+[profile "erroneus-tag-test"]
 family = dir
 layout = raid1
 tags = no-tag-1,no-tag-2
