lrs: take into account grouping at write allocation
If a grouping is ask at put, only media with this grouping are
selected. If no available medium has this grouping, the put could
not be done. Providing a new medium with this grouping, will be
done in a following patch.

Change-Id: I6f03731eab532b261ba355b0e8ddb27f1ca7e078
Signed-off-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14076
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Gauthier Evraerd <gauthier.evraerd@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>

--- a/tests/externs/cli/Makefile.am
+++ b/tests/externs/cli/Makefile.am
@@ -56,6 +56,7 @@ check_SCRIPTS=acceptance.test \
               test_format.test \
               test_get.sh \
               test_group_sync.sh \
+              test_grouping.test \
               test_import.test \
               test_ldm.sh \
               test_list_sort.test \
