cfg: add the default_copy_name in the conf
This patch adds the default copy name in the conf. This name will be
used when no copy name are provided with the put or other commands.

Change-Id: Ifc39557bd104c1ad312b6a33a2a474f2b11e2835
Signed-off-by: Gauthier EVRAERD <gauthier.evraerd@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14104
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>

--- a/doc/cfg/template.conf
+++ b/doc/cfg/template.conf
@@ -195,6 +195,9 @@ layout = raid1
 lyt-params = repl_count=1
 library = legacy
 
+[copy]
+default_copy_name = source
+
 ######### Tape/drive support and compatibility rules ########
 # You should not modify the following configuration unless:
 #  * You want to add support for a new device or tape model
