--- a/tests/phobos.conf
+++ b/tests/phobos.conf
@@ -80,6 +80,9 @@ layout = raid1
 tags = no-tag-1,no-tag-2
 library = legacy
 
+[copy]
+default_copy_name = source
+
 [tlc_legacy]
 hostname = localhost
 port = 20123
