cli: change `distutils` dependency to `setuptools`
`distutils` package will be removed from python3.12. The PEP632[1]
document advise to migrate to `setuptools`, which works fine for our use
case.

As our `python` version is 3.6 on RHEL8, and the package `setuptools` is
not available for this version, we still rely on `distutils` for RHEL8.

[1] https://peps.python.org/pep-0632/#migration-advice

Change-Id: If5dc0299bbcc9cd790bfa58b782d3890801c804c
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14087
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>
Reviewed-by: Yoann VALERI <yoann.valeri@cea.fr>

--- a/phobos.spec.in
+++ b/phobos.spec.in
@@ -61,6 +61,9 @@ Requires: %{python_prefix}-PyYAML
 Requires: %{python_prefix}-clustershell
 Requires: %{python_prefix}-psycopg2
 Requires: %{python_prefix}-tabulate
+%if 0%{?rhel} > 8
+Requires: %{python_prefix}-setuptools
+%endif
 Requires: protobuf
 Requires: protobuf-c
 Requires: openssl >= 0.9.7
