cli: rename `cli.py` to `__init__.py`
This renaming is due to the CLI refactoring, where a new `cli` directory
will be created in `scr/cli/phobos`, thus conflicting with the current
`cli.py`.

Change-Id: I178a81f828db7e4183d7d9918773a5b3a756e2a9
Signed-off-by: Sebastien Gougeaud <sebastien.gougeaud@cea.fr>
Reviewed-on: https://gerrit.ccc.ocre.cea.fr/gerrit/c/phobos/+/14098
Tested-by: Jenkins s8open_nr <s8open_nr@ccc.ocre.cea.fr>
Reviewed-by: Gauthier Evraerd <gauthier.evraerd@cea.fr>
Reviewed-by: Patrice LUCAS <patrice.lucas@cea.fr>

--- a/src/cli/Makefile.am
+++ b/src/cli/Makefile.am
@@ -3,7 +3,7 @@ AM_CFLAGS= $(CC_OPT)
 C_MODULES_SO=phobos/core/const.so \
 	     phobos/core/glue.so
 
-EXTRA_DIST=phobos/cli.py \
+EXTRA_DIST=phobos/__init__.py \
 	   phobos/output.py \
 	   phobos/core/__init__.py \
 	   phobos/core/admin.py \
